# life-demo

./: README.md  pyproject.toml
src/life_demo/: __init__.py  life.py  main.py
tests/: test_life.py
